--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		<h2>Test: Publishing Datawrapper Visualizations</h2>
 	</div>
 
-	<iframe title="The Top 3 threat types in Texas, 2015-2024" aria-label="Stacked Bars" id="datawrapper-chart-jD3R6" src="https://datawrapper.dwcdn.net/jD3R6/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="181" data-external="1"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r,i=0;r=e[i];i++)if(r.contentWindow===a.source){var d=a.data["datawrapper-height"][t]+"px";r.style.height=d}}}))}();
+	<iframe title="The Top 3 Police Threat Types in Texas, 2015-2024" aria-label="Stacked Bars" id="datawrapper-chart-jD3R6" src="https://datawrapper.dwcdn.net/jD3R6/2/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="198" data-external="1"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r,i=0;r=e[i];i++)if(r.contentWindow===a.source){var d=a.data["datawrapper-height"][t]+"px";r.style.height=d}}}))}();
 </script>
 </body>
 
